examples/test/testpolicy17871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17871
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key23: value26
      key18: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value22
          key9: value17
          key14: value13
      podSelector:
        matchLabels:
          key29: value10
